# gamedev-utils

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
CMake/: IncludeUrho3D.cmake  TotalList.cmake
GraphPathfinding/: CMakeLists.txt  GraphAdapter.hpp  GraphPathfinding.cpp  GraphPathfinding.hpp  TestGraphPathfinding.cpp
HexagonalGrids/: CMakeLists.txt  DoubledCoordsHexGrid.cpp  DoubledCoordsHexGrid.hpp  Urho3DHexagonalGrid.cpp  Urho3DHexagonalGrid.hpp
LowpolyPrototypingModels/: Blend.blend  Blend.blend1
QuestStateMachine/: CMakeLists.txt  DialogueTest.cpp  QuestState.cpp  QuestState.hpp  QuestStateMachine.cpp  QuestStateMachine.hpp
SharedPointer/: CMakeLists.txt  ReferenceCounted.cpp  ReferenceCounted.hpp  SharedPointer.hpp  Test.cpp
UniversalException/: CMakeLists.txt  CustomTerminate.hpp  UniversalException.hpp
Urho3DActivitiesApplication/: ActivitiesApplication.cpp  ActivitiesApplication.hpp  Activity.cpp  Activity.hpp  CMakeLists.txt  ModularActivity.cpp  ModularActivity.hpp
Urho3DDebugCamera/: CMakeLists.txt  DebugCamera.cpp  DebugCamera.hpp  DebugCameraBase.cpp  DebugCameraBase.hpp  FirstPersonDebugCamera.cpp  FirstPersonDebugCamera.hpp  ThirdPersonDebugCamera.cpp  ThirdPersonDebugCamera.hpp
Urho3DUIResizerComponent/: CMakeLists.txt  EditorLauncher.cpp  UIResizer.cpp  UIResizer.hpp
